# itcd

./: AGENTS.md  NEDB.md  codemagic.yaml  configure.ac
.github/workflows/: linux-static.yml  macos-build.yml  nedb-ci.yml  windows-build.yml
nedb-ffi/: Cargo.toml  build.rs  nedb.h
nedb-ffi/src/: lib.rs
src/: Makefile.am  blockencodings.cpp  chain.cpp  chain.h  chainparams.cpp  coins.cpp  coins.h  dbwrapper.h  dbwrapper_nedb.cpp  ghost.cpp  ghost.h  init.cpp  miner.cpp  net_processing.cpp  pow.cpp  pow.h  txdb.cpp  txdb.h  validation.cpp  validation.h
src/consensus/: params.h
src/rpc/: mining.cpp
src/test/: dual_pow_tests.cpp
src/wallet/: bdb.cpp  wallet.cpp
