[package]
name        = "nedb-ffi"
version     = "0.2.0"
edition     = "2021"
description = "C FFI bridge — exposes the NEDB DAG engine to the ITC C++ node (replaces LevelDB)"
license     = "MIT"

[lib]
name       = "nedb_ffi"
# staticlib → links into itcd binary at build time
# cdylib    → shared .so/.dylib for dynamic linking
crate-type = ["staticlib", "cdylib"]

# ── Feature flags ─────────────────────────────────────────────────────────────
# Phase 2 is now the default. It activates nedb_core_v2::Db as storage:
#   - Real BLAKE2b-512 Merkle chain head (MANIFEST Merkle root)
#   - MVCC AS OF seq — any UTXO state at any block height
#   - Causal provenance: caused_by = prev_node_hash
#   - AES-256-GCM encryption via NEDB_TMK env var
#
# To build Phase 1 (BTreeMap in-process, no persistence):
#   cargo build --release --no-default-features
[features]
default = ["phase2"]
phase2  = ["nedb-core-v2", "serde_json"]

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
hex    = "0.4"
blake2 = { version = "0.10", optional = true }  # Phase 1 only (not needed in phase2)

# Phase 2: real NEDB DAG engine (activated by default).
nedb-core-v2 = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-core-v2", optional = true }
serde_json   = { version = "1", optional = true }

[build-dependencies]
# cbindgen generates nedb.h from #[no_mangle] exports with C++ compat guards.
cbindgen = "0.26"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
