[package]
name        = "nedb-ffi"
version     = "0.2.0"
edition     = "2021"
description = "C FFI bridge — exposes the NEDB DAG engine to the ITC C++ node (replaces LevelDB)"
license     = "MIT"

[lib]
name       = "nedb_ffi"
# staticlib → links into itcd binary at build time
# cdylib    → shared .so/.dylib for dynamic linking
crate-type = ["staticlib", "cdylib"]

# ── Feature flags ─────────────────────────────────────────────────────────────
# Phase 2 is now the default. It activates nedb_core_v2::Db as storage:
#   - Real BLAKE2b-512 Merkle chain head (MANIFEST Merkle root)
#   - MVCC AS OF seq — any UTXO state at any block height
#   - Causal provenance: caused_by = prev_node_hash
#   - AES-256-GCM encryption via NEDB_TMK env var
#
# To build Phase 1 (BTreeMap in-process, no persistence):
#   cargo build --release --no-default-features
[features]
default = ["phase2"]
phase2  = ["nedb-engine",  "serde_json", "rayon", "blake2"]

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
hex    = "0.4"
blake2 = { version = "0.10", optional = true }  # Phase 1 head chain + Phase 2 write-dedup value fingerprint

# Phase 2: real NEDB DAG engine (activated by default).
# Pinned to the v2.5.0 release tag (latest) — ships the v3 segment/pack object
# store (gated by NEDB_DAG_V3, default off), durable flush-on-close, the macOS
# fast-fsync path (gated by NEDB_FAST_FSYNC), and the segment-aware bulk db.list()
# enumeration that nedb_scan uses to load the block index at boot. nedb_set_dag_v3()
# / nedb_set_fast_fsync() flip those switches; this pin is load-bearing for
# -dagv3 / -dagfastsync.
nedb-engine  = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-engine", tag = "v2.5.0", optional = true }
serde_json   = { version = "1", optional = true }
rayon        = { version = "1", optional = true }  # parallel scan for startup

[build-dependencies]
# cbindgen generates nedb.h from #[no_mangle] exports with C++ compat guards.
cbindgen = "0.26"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
